# LaplaceGrowthSimulation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: canvassub.cpp  canvassub.h  configsub.cpp  configsub.h  configsub.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matproc.cpp  matproc.h
